fixed layout issue

--- a/client/src/scss/_chat.scss
+++ b/client/src/scss/_chat.scss
@@ -192,12 +192,12 @@
 
       @include second-mobile-responsiveness {
         width: 90vw;
-        margin: 70px auto 0 auto; 
+        margin: 50px auto 0 auto; 
         position: relative;
       }
 
       @media (max-height:670px){
-        margin-top: 40px;
+        margin-top: 20px;
       }
 
       .chat-setting {
